force-app/main/default/objects/Commercial_Code_Batch_Context__c/Commercial_Code_Batch_Context__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Commercial Code Batch Context</label>
</CustomObject>