force-app/main/default/objects/Commercial_Code_Batch_Context__c/fields/BollettaDone__c.field-meta.xml
<CustomField>
    <fullName>BollettaDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BollettaDone</label>
    <type>Checkbox</type>
</CustomField>