force-app/main/default/objects/Commercial_Code_Batch_Context__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>CampaignId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>