force-app/main/default/objects/Commercial_Code_Batch_Context__c/fields/CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberId__c</fullName>
    <label>CampaignMemberId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>