force-app/main/default/objects/Commercial_Code_Batch_Context__c/fields/CommercialCodeDone__c.field-meta.xml
<CustomField>
    <fullName>CommercialCodeDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommercialCodeDone</label>
    <type>Checkbox</type>
</CustomField>